fixed mobile flyout on iphone by replacing marign with postiion

--- a/addons/shared_addons/themes/brd/sass/_layout.scss
+++ b/addons/shared_addons/themes/brd/sass/_layout.scss
@@ -58,10 +58,10 @@ body{
 		    transition: all 0.3s; 
 		}
 		nav{
-			 -webkit-transition: margin 0.3s;
-		    -moz-transition: margin 0.3s;
-		    -o-transition: margin 0.3s;
-		    transition: margin 0.3s; 
+			 -webkit-transition: all 0.3s;
+			    -moz-transition: all 0.3s;
+			    -o-transition: all 0.3s;
+			    transition: all 0.3s; 
 		}
 		#outer-content{
 			left:0;
